...
    Row(
        modifier = Modifier.fillMaxWidth(),
        horizontalArrangement = Arrangement.SpaceBetween,
        verticalAlignment = Alignment.CenterVertically
    ) {
        NavIconButton(
            modifier = Modifier.testTag("prev_button"),
            onClick = onPrev,
            enabled = stateModel.hasCurrentCard
        ) {
            Icon(Icons.Default.ArrowBack, contentDescription = stringResource(R.string.content_desc_prev))
        }
        Row(
...
                onClick = { showExitDialog = true },
                enabled = stateModel.hasCurrentCard
            ) {
                Icon(Icons.Default.StopCircle, contentDescription = stringResource(R.string.content_desc_exit_session))
            }
            NavIconButton(
                modifier = Modifier.testTag("next_button"),
                onClick = onNext,
                enabled = stateModel.hasCurrentCard
            ) {
                Icon(Icons.Default.ArrowForward, contentDescription = stringResource(R.string.content_desc_next))
            }
        }
...
